Made registries non-static and changed GCP to use roles instead of IAM permissions